--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -23,7 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zod": "^3.25.76",
-    "fluent-convex": "file:../"
+    "fluent-convex": "*"
   },
   "devDependencies": {
     "@convex-dev/eslint-plugin": "^1.0.0",
