--- a/apps/example-tanstack-start/package.json
+++ b/apps/example-tanstack-start/package.json
@@ -7,6 +7,7 @@
     "dev": "npx convex dev --once && concurrently -r npm:dev:web npm:dev:convex",
     "dev:web": "vite dev",
     "dev:ts": "tsc -b -w",
+    "typecheck": "tsc -b --noEmit",
     "dev:convex": "npx convex dev",
     "build": "vite build && tsc --noEmit",
     "start": "node .output/server/index.mjs",
@@ -20,8 +21,11 @@
     "@tanstack/react-router-with-query": "^1.130.17",
     "@tanstack/react-start": "^1.132.2",
     "convex": "^1.29.0",
+    "convex-helpers": "^0.1.104",
+    "fluent-convex": "*",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@convex-dev/eslint-plugin": "^1.0.0",
