--- a/packages/fluent-convex/package.json
+++ b/packages/fluent-convex/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluent-convex",
-  "version": "0.7.2",
+  "version": "0.7.3",
   "description": "A fluent API builder for Convex functions with middleware support, inspired by oRPC",
   "type": "module",
   "main": "./dist/index.js",
@@ -45,7 +45,7 @@
     "url": "git+https://github.com/mikecann/fluent-convex.git"
   },
   "peerDependencies": {
-    "convex": "^1.29.2",
+    "convex": "1.28.2",
     "zod": "^3.0.0"
   },
   "dependencies": {
@@ -54,7 +54,7 @@
   "devDependencies": {
     "@types/node": "^22.13.10",
     "@vitest/ui": "^2.1.8",
-    "convex": "^1.29.2",
+    "convex": "1.28.2",
     "prettier": "^3.5.3",
     "typescript": "~5.7.2",
     "vitest": "^2.1.8",
